<resources>
    <string name="app_name">EntekhabVahed</string>
    <string name="btn_input_course_text">لیست دروس</string>
    <string name="btn_input_rule_text">لیست قوانین</string>
    <string name="btn_about_us_text">ارتباط با ما</string>
    <string name="btn_schedule_viewer_text">برنامه هفتگی</string>
    <string name="fill_courses_name_edit_text">نام درس</string>
    <string name="fill_courses_id_edit_text">کد گلستان درس</string>
    <string name="fill_courses_add_groups_btn_text">+</string>
    <string name="fill_courses_ok_btn_text">ok</string>
    <string name="fill_courses_cancel_btn_text">cancel</string>
    <string name="groups_edit_id_hint">کد گروه</string>
    <string name="groups_edit_teacher_hint">نام استاد</string>
    <string name="groups_edit_first_timing">زمان بندی اول</string>
    <string name="groups_edit_second_timing">زمان بندی دوم</string>
    <string name="groups_edit_third_timing">زمان بندی سوم</string>
    <string name="groups_edit_ok_btn">ok</string>
    <string name="groups_edit_cancel_btn">cancel</string>
    <string name="custom_time_picker_prompt">انتخاب روز</string>
    <string name="fill_rule_name_edit_text">نام معیار امتیاز دهی</string>
    <string name="fill_rule_teacher_edit_text">نام استاد</string>
    <string name="fill_rule_course_edit_text">نام درس</string>
    <string-array name="custom_time_picker_days">
        <item>NULL</item>
        <item>شنبه</item>
        <item>یک شنبه</item>
        <item>دوشنبه</item>
        <item>سه شنبه</item>
        <item>چهارشنبه</item>
        <item>پنچ شنبه</item>
    </string-array>
    <string name="custom_time_picker_edit_text1">ساعت شروع</string>
    <string name="custom_time_picker_edit_text2">ساعت پایان</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string-array name="planets_array">
        <item>همه روز ها</item>
        <item>شنبه</item>
        <item>یک شنبه</item>
        <item>دو شنبه</item>
        <item>سه شنبه</item>
        <item>چهار شنبه</item>
        <item>پنج شنبه</item>
    </string-array>
    <string-array name="relation_start">
        <item>قبل از</item>
        <item>بعد از</item>
    </string-array>
    <string name="telegeram_info">\@Mohammad7613</string>
    <string name="call_info">+989039757144</string>
    <string name="email_info">yousef_javaherian@yahoo.com</string>
    <string name="no_schedule_warning">برنامه هفتگی جهت نمایش وجود ندارد!</string>
    <string name="ok_button">OK</string>

</resources>
